12246 pci_get_irq_routing_table() leaks under UEFI Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>